Completing Profile Details + New Profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
-        <!--Main Activity-->
+        <!-- Main Activity -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!--Create Profile Activity-->
+        </activity> <!-- Create Profile Activity -->
         <activity
             android:name=".CreateProfileActivity"
+            android:theme="@style/AppThemeNoActionBar" /> <!-- Profile Details Activity -->
+        <activity
+            android:name=".ProfileDetailActivity"
             android:theme="@style/AppThemeNoActionBar" />
-
-        <!--Profile Details Activity-->
-        <activity android:name=".ProfileDetailActivity"
-            android:theme="@style/AppThemeNoActionBar"/>
     </application>
 
 </manifest>
